gccida/c3/type_lists_compatible_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/type_lists_compatible_p/src/c-typeck.c:1113:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/type_lists_compatible_p/src/c-typeck.c:1126:17: error: expected expression
if ( *( _OWORD *)&args1 != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/type_lists_compatible_p/src/c-typeck.c:1126:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&args1 != 0LL ) 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/type_lists_compatible_p/src/obj/c-typeck.o] Error 1
